--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.0
   fluttertoast: ^8.2.2
+  provider: ^5.0.0
 
 
 dev_dependencies:
