--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 .svn/
 migrate_working_dir/
 
+
+
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -31,6 +34,9 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+lib/firebase_options.dart
+lib/google-services.json
+.env
 
 # Symbolication related
 app.*.symbols
