--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^5.0.0
   input_quantity:
   http: ^1.1.0
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -75,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
